# play

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/actions/setup-python/: action.yaml
.github/workflows/: cd.yaml  ci.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_companies_and_team_tables.py  0002_seed_companies_and_teams.py
app/: database.py  main.py  models.py  schemas.py
app/models/: __init__.py  company.py  team.py
app/routers/: __init__.py  companies.py  teams.py
app/schemas/: __init__.py  company.py  team.py
app/services/: companies.py  teams.py
migrations/: 001_initial_schema.sql  002_seed.sql
src/play/: __init__.py  const.py  database.py  main.py  models.py  schemas.py
src/play/routers/: __init__.py  companies.py  teams.py
src/play/services/: companies.py  teams.py
tests/: conftest.py  test_routers_companies.py  test_schemas.py  test_schemas_team.py
tests/test_routers/: test_companies.py  test_teams.py
tests/test_schemas/: test_company.py
tests/test_services/: test_companies.py  test_teams.py
