[project]
name = "play"
version = "0.1.0"
description = "An API to manage videogame companies with their teams."
requires-python = ">=3.14"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "fastapi>=0.131.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.41.0",
    "sqlalchemy>=2.0.46",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "bandit>=1.9.3",
    "aiosqlite>=0.22.1",
    "pytest-cov>=7.0.0",
    "coverage>=7.13.4",
]

[tool.uv]
required-version = ">=0.10.4"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["uv_build>=0.10.4"]
build-backend = "uv_build"
